--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi-objectid": "^3.0.1",
-    "mongoose": "^5.9.19"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.19",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0"
   }
 }
