--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./app.js",
+    "dev": "env NODE_ENV=development node ./app.js",
+    "prod": "env NODE_ENV=production node ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "nodemonConfig": {
+    "exec": "npm run prod"
   },
   "engines": {
     "node": "12.x"
